--- a/CDHEmailApi/appsettings.json
+++ b/CDHEmailApi/appsettings.json
@@ -10,8 +10,8 @@
     "Server": "smtp.gmail.com",
     "DefaultCredentials": false,
     "Port": 465,
-    "SenderEmail":  "g.abduba43@gmail.com",
-    "Password": "zqiruiugtcqlauox",
+    "SenderEmail":  "Your email",
+    "Password": "Your password",
     "SSL": true
   },
   "AllowedHosts": "*"
